<resources>
    <string name="app_name">Kachok</string>
    <string name="app_name2">Go to work</string>
    <string name="app_name_long">True Kachok</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Pedometer</string>
    <string name="action_training">Training</string>
    <string name="action_muscles">Muscles</string>
    <string name="action_weather">Weather</string>
    <string name="action_notes">Notes</string>
    <string name="action_muscles1">Muscles Front</string>
    <string name="action_muscles2">Muscles Back</string>
    <string name="action_muscles3">Chest</string>
    <string name="action_muscles4">Shoulders</string>
    <string name="action_muscles5">Biceps</string>
    <string name="action_muscles6">Leg muscles</string>
    <string name="action_muscles7"> </string>
    <string name="version_number">Version</string>
    <string name="about_author">Author:  </string>
    <string name="about_author_names" translatable="false">Sudnikovich Kirill </string>
    <string name="about_author_contributors">228</string>
    <string name="about_affiliation">In affiliation with БГУИР</string>
    <string name="more_info">More information can be found on:</string>
    <string name="about_third_party_libs">The app uses <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart from Philipp Jahoda</a> (Apache 2 License).</string>
    <string name="privacy_friendly">This application belongs to KIRI corp.</string>
    <string name="github" translatable="false"><a href="https://github.com/Andrewel/Kachok2">Github-Repository</a></string>
    <string name="url"><a href="https://www.pornhub.com">Our Website-Relax </a></string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_calories">kcal</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">This app can count your steps in background, provides you an overview about your walked steps and allows you to define custom walking modes and notifications.</string>
    <string name="help_functionality_step_counter_summary">The step counter counts your daily steps in background and can be disabled in the settings.</string>
    <string name="help_functionality_notification_heading">Permanent Notification</string>
    <string name="help_functionality_notification">Notification</string>
    <string name="help_functionality_notification_summary">The permanent notification is necessary to keep the step counter alive in background. The content of the notification can be chosen in the settings.</string>
    <string name="help_functionality_notification_delete">You can disable all notifications in system preferences.</string>
    <string name="help_functionality_motivation_alert">Motivation alert</string>
    <string name="help_functionality_motivation_alert_summary">The app can show you motivation alerts if the achievement of your daily step goal is in danger. You can define the criterion, the time of day and the notification texts.</string>
    <string name="help_privacy_heading">Security Info</string>
    <string name="help_permission_boot_heading">Permission: Receive Boot Completed</string>
    <string name="help_permission_boot_description">is used to start the step counter and set the notifications at boot time. If the permission is not granted you have to start the app manually once after boot to activate the app.</string>
    <string name="help_permissions_selection">The permissions used by Kachok app can not be managed by the user in any Android version.</string>
    <string name="help_permission_wake_heading">Permission: Wake Lock</string>
    <string name="help_permission_wake_description">is used to keep the CPU awake to count the steps in background.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="pref_step_counter_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>
    <string name="pref_use_wake_lock" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>
    <string name="pref_default_daily_step_goal" translatable="false">10000</string>
    <string name="pref_title_daily_step_goal">Personal daily step goal</string>
    <string name="pref_unit_of_length" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string-array name="pref_keys_unit_of_length">
        <item>kilometers</item>
        <item>miles</item>
    </string-array>
    <string-array name="pref_values_unit_of_length" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="unit_of_length_km">1|km|kilometers|km/h</string>
    <string name="unit_of_length_mi">0.621371|mi|miles|mph</string>
    <string name="pref_explanation_weight_and_gender">To improve the calculation of the calories please set your weight and gender.</string>
    <string name="pref_summary_notification_permanent">The permanent notification is shown when the app counts your steps in background. You can customize what the app should show you.</string>
    <string name="pref_summary_accelerometer_threshold">The app uses the accelerometer of your device. To optimize the step detection adjust the sensitivity, please.</string>
    <string name="pref_weight" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.weight</string>
    <string name="pref_title_weight">Weight (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>
    <string name="pref_gender" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.gender</string>
    <string name="pref_title_gender">Gender</string>
    <string-array name="pref_keys_gender">
        <item>female</item>
        <item>male</item>
    </string-array>
    <string-array name="pref_values_gender" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_accelerometer_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_threshold</string>
    <string name="pref_title_accelerometer_threshold">Sensitivity</string>
    <string-array name="pref_keys_accelerometer_threshold">
        <item>very high</item>
        <item>higher</item>
        <item>high</item>
        <item>normal</item>
        <item>low</item>
        <item>lower</item>
        <item>very low</item>
    </string-array>
    <string-array name="pref_values_accelerometer_threshold" translatable="false">
        <item>0.125</item>
        <item>0.25</item>
        <item>0.50</item>
        <item>0.75</item>
        <item>1.00</item>
        <item>1.25</item>
        <item>1.50</item>
    </string-array>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_permanent_notification">Permanent Notification</string>
    <string name="pref_group_title_motivation_alert">Motivation Alert</string>
    <string name="pref_notification_permanent_show_steps" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
    <string name="pref_notification_permanent_show_calories" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_calories</string>
    <string name="pref_title_notification_permanent_show_calories">Show number of calories</string>
    <string name="pref_notification_motivation_alert_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_enabled</string>
    <string name="pref_title_notification_motivation_alert_enabled">Enable motivation alert</string>
    <string name="pref_notification_motivation_alert_time" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_time</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_notification_motivation_alert_texts" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_texts</string>
    <string name="pref_title_notification_motivation_alert_texts">Motivation notification texts</string>
    <string name="pref_notification_motivation_alert_criterion" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_criterion</string>
    <string name="pref_title_notification_motivation_alert_criterion">Motivation alert criterion</string>
    <string-array name="pref_keys_notification_motivation_alert_criterion">
        <item>less than 90&#65285; of daily step goal</item>
        <item>less than 70&#65285; of daily step goal</item>
        <item>less than 50&#65285; of daily step goal</item>
    </string-array>
    <string-array name="pref_values_notification_motivation_alert_criterion" translatable="false">
        <item>90</item>
        <item>70</item>
        <item>50</item>
    </string-array>
    <string name="pref_header_walking_modes">Walking modes activate</string>
    <string name="pref_daily_step_goal" translatable="false">org.secuso.kachok.pref.daily_step_goal</string>
    <string name="notification_text_steps">%1$s of %2$s steps walked today.</string>
    <string name="notification_text_distance">%1$.2f %2$s walked today.</string>
    <string name="notification_text_calories">Burned %.2f kcal today.</string>
    <string name="action_calories">Calories</string>
    <string name="action_distance">Distance</string>
    <string name="action_steps">Steps</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="nav_music">Music</string>
    <string name="map_location">Map</string>
    <string name="fab_m1">Neck</string>
    <string name="fab_m2">Shoulders</string>
    <string name="fab_m3">Chest</string>
    <string name="fab_m4">Biceps</string>
    <string name="fab_m5">ForeArms</string>
    <string name="fab_m6">Press</string>
    <string name="fab_m7">Legs muscles</string>
    <string name="fab_mb1">Trapesius</string>
    <string name="fab_mb2">Crilia</string>
    <string name="fab_mb3">Triceps</string>
    <string name="fab_mb4">Crilia</string>
    <string name="fab_mb5">Crilia</string>
</resources>