<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="org.bel.kachok.activities.MainActivity">

    <group android:id="@+id/menu_group_general" android:checkableBehavior="all">
        <item android:id="@+id/menu_home" android:title="@string/action_main" android:icon="@drawable/ic_directions_walk_65black_30dp"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_training" android:title="@string/action_training" android:icon="@drawable/ic_directions_run"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_muscles" android:title="@string/action_muscles" android:icon="@drawable/ic_directions_run"
            android:orderInCategory="100" app:showAsAction="never" />
    </group>

    <group>
        <item android:id="@+id/menu_map" android:title="@string/map_location" android:icon="@drawable/ic_my_location_white_24dp"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_music" android:title="@string/nav_music" android:icon="@drawable/ic_play_arrow_black_24dp"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_weather" android:title="@string/action_weather" android:icon="@drawable/ic_current_weather_black_24dp"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_notes" android:title="@string/action_notes" android:icon="@drawable/ic_feedback"
            android:orderInCategory="100" app:showAsAction="never" />
</group>

    <group android:id="@+id/menu_group_settings" android:checkableBehavior="all">
        <item android:id="@+id/menu_settings" android:title="@string/action_settings" android:icon="@drawable/ic_settings"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_help" android:title="@string/action_help" android:icon="@drawable/ic_action_help"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_about" android:title="@string/action_about" android:icon="@drawable/ic_action_about"
            android:orderInCategory="100" app:showAsAction="never" />
    </group>
</menu>
