<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fab:srcCompat="@drawable/skeletonmuscles3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="415dp"
        android:layout_height="922dp"
        fab:srcCompat="@drawable/skelet_muscles2" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        fab:fab_addButtonColorPressed="@color/colorAccent"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_addButtonStrokeVisible="false"
        fab:fab_expandDirection="up"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_mb1" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_mb2" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_mb3" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_mb4" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_mb5" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_checklist2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="27"
            android:src="@drawable/ic_format_list_bulleted_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m1" />
    </GridLayout>

</FrameLayout>
