<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="398dp"
        android:layout_height="547dp"
        fab:srcCompat="@drawable/skeletal_muscles" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        fab:fab_addButtonColorPressed="@color/colorAccent"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_addButtonStrokeVisible="false"
        fab:fab_expandDirection="up"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:layout_constraintDimensionRatio="w,1:1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m1" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m2" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m3" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m4" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m5" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m6" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_m7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_short_text_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m7" />



    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_checklist"
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:layout_column="0"
            android:layout_row="28"
            android:src="@drawable/ic_format_list_bulleted_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_m1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="423dp" />
    </GridLayout>

</FrameLayout>
